 284.	[func]		The DNSSEC key generation and signing tools now
			generate randomness from keyboard input on systems
			that lack /dev/random.

 283.	[cleanup]	The 'lwresd' program is now a link to 'named'.

 282.	[bug]		lexer now returns ISC_R_RANGE if parsed integer is 
			too big for an usigned long.

 281.	[bug]		fixed list of recognised config file category names.

 280.	[func]		Add isc-config.sh, which can be used to more
			easily build applications that link with
			our libraries.

 279.	[bug]		Private omapi function symbols shared between
			two or more files in libomapi.a were not namespace
			protected using the ISC convention of starting with
			the library name and two underscores ("omapi__"...)

 278.	[bug]		bin/named/logconf.c:category_fromconf() didn't take
			note of when isc_log_categorybyname() wasn't able
			to find the category name and would then apply the
			channel list of the unknown category to all categories.

 277.	[bug]		isc_log_categorybyname() and isc_log_modulebyname()
			would fail to find the first member of any category
			or module array apart from the internal defaults.
			Thus, for example, the "notify" category was improperly
			configured by named.

 276.	[bug]		dig now supports maximum sized TCP messages.

 275.	[bug]		The definition of lwres_gai_strerror() was missing 
			the lwres_ prefix.

 274.	[bug]		TSIG AXFR verify failed when talking to a BIND 8
			server.

 273.	[func]		The default for the 'transfer-format' option is
			now 'many-answers'.  This will break zone transfers
			to BIND 4.9.5 and older unless there is an explicit
			'one-answer' configuration.

 272.	[bug]		The sending of large TCP responses was canceled
			in mid-transmission due to a race condition
			caused by the failure to set the client object's
			"newstate" variable correctly when transitioning
			to the "working" state.

 271.	[func]		Attempt to probe the number of cpus in named
			if unspecified rather than defaulting to 1.
